--- a/Pages/Categorias/MainPage Bocadillos.xaml
+++ b/Pages/Categorias/MainPage Bocadillos.xaml
@@ -66,11 +66,11 @@
 
                 <!-- Fila 2 -->
 
-                <ImageButton Grid.Row="2" Grid.Column="0" x:Name="chocolat"  Source="chocolat.png"/>
+                <ImageButton Grid.Row="2" Grid.Column="0" x:Name="chocolat"  Source="chocolat.png" Clicked="BocadillosDulces1_Clicked"/>
 
-                <ImageButton Grid.Row="2" Grid.Column="1" x:Name="coco"  Source="coco.png"/>
+                <ImageButton Grid.Row="2" Grid.Column="1" x:Name="coco"  Source="coco.png" Clicked="BocadillosDulces2_Clicked"/>
 
-                <ImageButton Grid.Row="2" Grid.Column="2" x:Name="tartaleta" Source="tartaleta.png"/>
+                <ImageButton Grid.Row="2" Grid.Column="2" x:Name="tartaleta" Source="tartaleta.png" Clicked="BocadillosDulces3_Clicked"/>
 
                 <!-- Fila 3 -->
 
@@ -100,11 +100,11 @@
 
                 <!-- Fila 6 -->
 
-                <ImageButton Grid.Row="6" Grid.Column="0" Source="deditos.png"/>
+                <ImageButton Grid.Row="6" Grid.Column="0" Source="deditos.png" Clicked="BocadillosSalados1_Clicked"/>
 
-                <ImageButton Grid.Row="6" Grid.Column="1" Source="mangoverd.png"/>
+                <ImageButton Grid.Row="6" Grid.Column="1" Source="mangoverd.png" Clicked="BocadillosSalados2_Clicked"/>
 
-                <ImageButton Grid.Row="6" Grid.Column="2" Source="galletas.png"/>
+                <ImageButton Grid.Row="6" Grid.Column="2" Source="galletas.png" Clicked="BocadillosSalados3_Clicked"/>
 
                 <!-- Fila 7 -->
 
@@ -134,11 +134,11 @@
 
                 <!-- Fila 10 -->
 
-                <ImageButton Grid.Row="10" Grid.Column="0" Source="gomitas.png"/>
+                <ImageButton Grid.Row="10" Grid.Column="0" Source="gomitas.png" Clicked="AcidosBocadillos1_Clicked"/>
 
-                <ImageButton Grid.Row="10" Grid.Column="1" Source="mani.png"/>
+                <ImageButton Grid.Row="10" Grid.Column="1" Source="mani.png" Clicked="AcidosBocadillos2_Clicked"/>
 
-                <ImageButton Grid.Row="10" Grid.Column="2" Source="kiwi.png"/>
+                <ImageButton Grid.Row="10" Grid.Column="2" Source="kiwi.png" Clicked="AcidosBocadillos3_Clicked"/>
 
                 <!-- Fila 11 -->
 
