Adiccion del menu de usuario y la opción de cerrar sesión

--- a/Pages/MainPage Cuenta.xaml
+++ b/Pages/MainPage Cuenta.xaml
@@ -8,6 +8,8 @@
              
              IconImageSource="cuentaicono"
              
+             NavigationPage.HasBackButton="False"
+             
              NavigationPage.HasNavigationBar="false"
              
              Title="Cuenta">
